--- a/app/views/recommenders/index.html.erb
+++ b/app/views/recommenders/index.html.erb
@@ -1,1 +1,31 @@
-Hello World!
+<div class="mt-10">
+  <%= link_to '新增推薦者', new_recommender_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" %>
+</div>
+<table class="mt-10 table-auto">
+  <thead>
+    <tr>
+      <th>title</th>
+      <th>first_name</th>
+      <th>last_name</th>
+      <th>job_title</th>
+      <th>department</th>
+      <th>institution</th>
+      <th>industry</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @recommenders.each do |recommender| %>
+      <tr>
+        <td><%= recommender.title %></td>
+        <td><%= recommender.first_name %></td>
+        <td><%= recommender.last_name %></td>
+        <td><%= recommender.job_title %></td>
+        <td><%= recommender.department %></td>
+        <td><%= recommender.institution.name %></td>
+        <td><%= recommender.industry.name %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
