--- a/app/views/recommenders/new.html.erb
+++ b/app/views/recommenders/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recommender: @recommender %>
+<div class="container mx-auto">
+  <h2> 名冊用途： </h2>
+  <p> QS世界大學排名 (QS World University Ranking) 每年約於3月前後，會透過電郵進行全球性的大學聲譽線上問卷調查，調查結果將成為世界大學排名計分項目之一 (佔總分50%)。除了QS自行產出的問卷寄送對象外，其也開放大學自行提交建議名冊供QS寄發前述問卷之用。 </p>
+  <h2>名冊利用方式：</h2>
+  <p>學校自行集結名冊對象資料後，依QS規定，須先就名冊內國籍或所屬機構屬歐盟 (EU) 之對象先行取得個資授權同意後，始得正式和QS提出名冊。QS收到大學提出的名冊後，會另以QS官方通知，寄出問卷電郵。收到電郵之對象，可自行選擇是否應邀填寫問卷，問卷結果且僅作為QS大學排聲譽調查之用，QS不會告知提名學校投票結果。</p>
+  <h2>學界人士提名優先順序建議 :</h2>
+  <p>1. 友好、有互動、且對本校有正面評價者。2. 屬外國學術單位。3. 具主管職者，如：行政主管、院長、系所主管等。4. 學界資歷長者。5. 近五年學術發表活躍，或高引用學者。6. 助理教授、副教授、教授及以上者。7. 其他人員亦可列上，但建議以以上六項資格者為優先。  </p>
+  <h2>業界人士提名優先順序建議 :</h2>
+  <p>1. 友好、有互動、且對本校有正面評價者。2. 跨國或知名企業。3. 人事主管職、或有招聘職權者。4. 從業資歷長者。5. 本國或外國企業從業人士皆可。6. 其他人員亦可列上，但建議以以上五項資格者為優先。    </p>
+  <h2>名冊填寫說明：</h2>
+  <p>
+  1. 各欄位請以英文 (半形) 填入。2. 各欄位皆須提供資訊。3. 請勿過度提名同一間機構之人員，應儘量增加不同機構數。4. 務請確認填入資訊之正確性。5. 研究機構若偏屬學術類，則歸於學界，若偏向產業研發則歸於業界名冊。
+  </p>
+  <%= render 'form', recommender: @recommender %>
+</div>
