--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,6 +13,9 @@
       <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
         <% if current_user %>
           <li>
+            登入單位：<%= current_user.department.name %>
+          </li>
+          <li>
             <%= button_to "登出", destroy_user_session_path, method: :delete, class: "block py-2 pl-3 pr-4 text-lg text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"%>
           </li>
         <% else %>
