Add create 學術界 recommender feature

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,3 +1,4 @@
+<%= ENV['RAILS_ENV'] %>
 <nav class="bg-white border-gray-200 sm:px-4 py-2.5 dark:bg-gray-800 sticky top-0">
   <div class="container flex flex-wrap items-center justify-between mx-auto">
     <a href="/" class="flex items-center">
