--- a/app/views/admin/recommenders/_form.html.erb
+++ b/app/views/admin/recommenders/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_with(model: recommender, class: "px-8 pt-6 pb-8 my-4 bg-white rounded shadow-md") do |form| %>
+<%= form_with(model: [:admin, recommender], class: "px-8 pt-6 pb-8 my-4 bg-white rounded shadow-md") do |form| %>
   <% if recommender.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(recommender.errors.count, "error") %> prohibited this recommender from being saved:</h2>
-
       <ul>
         <% recommender.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,6 +9,26 @@
       </ul>
     </div>
   <% end %>
+
+  <div class="mb-4">
+    <%= form.label :provider_name, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :provider_name, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mb-4">
+    <%= form.label :provider_email, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :provider_email, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mt-4">
+    <label>
+      名單種類
+      <select name="category" id="category">
+          <option>學術界</option>
+          <option>產業界</option>
+      </select>
+    </label>
+  </div>
 
   <div class="mb-4">
     <%= form.label :title, class:"block mb-2 text-sm font-bold text-gray-700"%>
@@ -27,11 +46,16 @@
   </div>
 
   <div class="mb-4">
+    <%= form.label :email, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :email, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mb-4">
     <%= form.label :job_title, class:"block mb-2 text-sm font-bold text-gray-700"%>
     <%= form.text_field :job_title, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
   </div>
 
-  <div class="mb-4">
+  <div class="mb-4" id="department_block">
     <%= form.label :department, class:"block mb-2 text-sm font-bold text-gray-700"%>
     <%= form.text_field :department, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
   </div>
@@ -41,12 +65,48 @@
     <%= form.select :institution_id, all_institutions_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
   </div>
 
-  <div class="mt-4">
+  <div class="mt-4" id="industry_block" >
     <%= form.label :industry_id %><br />
     <%= form.select :industry_id, all_industries_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
   </div>
 
+  <div class="mb-4" id="company_name_block">
+    <%= form.label :company_name, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :company_name, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mt-4" id="country_block" >
+    <%= form.label :country %><br />
+    <%= form.select :country, all_countries_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
+  </div>
+
   <div class="flex items-center justify-between mt-4">
-    <%= form.submit "新增", class: "px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline" %>
+    <%= form.submit '名單提交', class: "px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline" %>
   </div>
 <% end %>
+
+<script>
+  const industry = document.querySelector('#industry_block')
+  const department = document.querySelector('#department_block')
+  const country = document.querySelector('#country_block')
+  const company_name = document.querySelector('#company_name_block')
+  document.querySelector("#category").addEventListener("change", function(e){
+    changeDisplay(e.target.value);
+  })
+
+  window.onload = changeDisplay('學術界');
+
+  function changeDisplay(category){
+    industry.style.display = 'none'
+    department.style.display = 'none'
+    country.style.display = 'none'
+    company_name.style.display = 'none'
+    if(category === '學術界') {
+      department.style.display = 'block'
+    }else {
+      industry.style.display = 'block'
+      country.style.display = 'block'
+      company_name.style.display = 'block'
+    }
+  }
+</script>
