--- a/app/views/admin/recommenders/_form.html.erb
+++ b/app/views/admin/recommenders/_form.html.erb
@@ -60,7 +60,7 @@
     <%= form.text_field :department, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
   </div>
 
-  <div class="mt-4">
+  <div class="mt-4" id="institution_block">
     <%= form.label :institution_id %><br />
     <%= form.select :institution_id, all_institutions_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
   </div>
@@ -71,13 +71,19 @@
   </div>
 
   <div class="mb-4" id="company_name_block">
-    <%= form.label :company_name, class:"block mb-2 text-sm font-bold text-gray-700"%>
-    <%= form.text_field :company_name, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+    <label>
+      Company Name(公司名稱)
+      <input type="text" name="company" id="company" />
+    </label>
   </div>
 
   <div class="mt-4" id="country_block" >
-    <%= form.label :country %><br />
-    <%= form.select :country, all_countries_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
+    <label>
+      Country(所屬國家)
+      <select name="country" id="country" class="form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none">
+        <%= all_countries_options %>
+      </select>
+    </label>
   </div>
 
   <div class="flex items-center justify-between mt-4">
@@ -90,6 +96,7 @@
   const department = document.querySelector('#department_block')
   const country = document.querySelector('#country_block')
   const company_name = document.querySelector('#company_name_block')
+  const institution = document.querySelector('#institution_block')
   document.querySelector("#category").addEventListener("change", function(e){
     changeDisplay(e.target.value);
   })
@@ -101,8 +108,10 @@
     department.style.display = 'none'
     country.style.display = 'none'
     company_name.style.display = 'none'
+    institution.style.display = 'none'
     if(category === '學術界') {
       department.style.display = 'block'
+      institution.style.display = 'block'
     }else {
       industry.style.display = 'block'
       country.style.display = 'block'
