--- a/app/views/admin/recommenders/_form.html.erb
+++ b/app/views/admin/recommenders/_form.html.erb
@@ -21,13 +21,8 @@
   </div>
 
   <div class="mt-4">
-    <label>
-      名單種類
-      <select name="category" id="category">
-          <option>學術界</option>
-          <option>產業界</option>
-      </select>
-    </label>
+    <%= form.label :category %><br />
+    <%= form.select :category, all_categories_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
   </div>
 
   <div class="mb-4">
@@ -97,7 +92,7 @@
   const country = document.querySelector('#country_block')
   const company_name = document.querySelector('#company_name_block')
   const institution = document.querySelector('#institution_block')
-  document.querySelector("#category").addEventListener("change", function(e){
+  document.querySelector("#recommender_category").addEventListener("change", function(e){
     changeDisplay(e.target.value);
   })
 
