--- a/app/views/recommenders/_form.html.erb
+++ b/app/views/recommenders/_form.html.erb
@@ -2,7 +2,6 @@
   <% if recommender.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(recommender.errors.count, "error") %> prohibited this recommender from being saved:</h2>
-
       <ul>
         <% recommender.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,6 +9,24 @@
       </ul>
     </div>
   <% end %>
+
+  <p>登入單位：<%= @department_name %></p>
+
+  <input name="user_token" type="hidden" value="<%= @user_token %>">
+  <div class="mb-4">
+    <%= form.label :provider_name, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :provider_name, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mb-4">
+    <%= form.label :provider_email, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :provider_email, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mt-4">
+    <%= form.label :category %><br />
+    <%= form.select :category, all_categories_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
+  </div>
 
   <div class="mb-4">
     <%= form.label :title, class:"block mb-2 text-sm font-bold text-gray-700"%>
@@ -27,26 +44,76 @@
   </div>
 
   <div class="mb-4">
+    <%= form.label :email, class:"block mb-2 text-sm font-bold text-gray-700"%>
+    <%= form.text_field :email, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mb-4">
     <%= form.label :job_title, class:"block mb-2 text-sm font-bold text-gray-700"%>
     <%= form.text_field :job_title, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
   </div>
 
-  <div class="mb-4">
+  <div class="mb-4" id="department_block">
     <%= form.label :department, class:"block mb-2 text-sm font-bold text-gray-700"%>
     <%= form.text_field :department, class: "w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" %>
   </div>
 
-  <div class="mt-4">
+  <div class="mt-4" id="institution_block">
     <%= form.label :institution_id %><br />
     <%= form.select :institution_id, all_institutions_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
   </div>
 
-  <div class="mt-4">
+  <div class="mt-4" id="industry_block" >
     <%= form.label :industry_id %><br />
     <%= form.select :industry_id, all_industries_options, {}, class: "form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"%>
   </div>
 
+  <div class="mb-4" id="company_name_block">
+    <label>
+      Company Name(公司名稱)
+      <input type="text" name="company" id="company" />
+    </label>
+  </div>
+
+  <div class="mt-4" id="country_block" >
+    <label>
+      Country(所屬國家)
+      <select name="country" id="country" class="form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none">
+        <%= all_countries_options %>
+      </select>
+    </label>
+  </div>
+
   <div class="flex items-center justify-between mt-4">
-    <%= form.submit "新增", class: "px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline" %>
+    <%= form.submit '名單提交', class: "px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline" %>
   </div>
 <% end %>
+
+<script>
+  const industry = document.querySelector('#industry_block')
+  const department = document.querySelector('#department_block')
+  const country = document.querySelector('#country_block')
+  const company_name = document.querySelector('#company_name_block')
+  const institution = document.querySelector('#institution_block')
+  document.querySelector("#recommender_category").addEventListener("change", function(e){
+    changeDisplay(e.target.value);
+  })
+
+  window.onload = changeDisplay('學術界');
+
+  function changeDisplay(category){
+    industry.style.display = 'none'
+    department.style.display = 'none'
+    country.style.display = 'none'
+    company_name.style.display = 'none'
+    institution.style.display = 'none'
+    if(category === '學術界') {
+      department.style.display = 'block'
+      institution.style.display = 'block'
+    }else {
+      industry.style.display = 'block'
+      country.style.display = 'block'
+      company_name.style.display = 'block'
+    }
+  }
+</script>
