Modify new recommender from link UI

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <%= render "layouts/nav" %>
+    <%= render "admin/nav" %>
     <%= link_to '名冊填報', new_admin_recommender_path %>
     <%= link_to '檢視名冊', admin_recommenders_path %>
     <%= link_to '產生問卷連結', share_admin_recommenders_path %>
