--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .recommender-form-label {
+    @apply text-right self-center
+  }
+
+  .recommender-form-input {
+    @apply bg-gray-100 py-2 pl-2 rounded-md
+  }
+
+  .recommender-form-select {
+    @apply bg-gray-100 py-2 pl-1 rounded-md
+  }
+}
