--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,29 +1,17 @@
-<nav class="bg-white border-gray-200 sm:px-4 py-2.5 dark:bg-gray-800 sticky top-0">
+<nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-800 sticky top-0">
   <div class="container flex flex-wrap items-center justify-between mx-auto">
     <a href="/" class="flex items-center">
-        <img src="/ntust-logo.png" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo" />
-        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">NTUST QS Recommender System</span>
+        <img src="/ntust-logo-dark.png" class="h-12" alt="NTUST logo" />
+        <span class="self-center ml-3 text-xl font-semibold whitespace-nowrap dark:text-white">NTUST QS 聲譽調查系統</span>
     </a>
-    <button data-collapse-toggle="mobile-menu" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu" aria-expanded="false">
-      <span class="sr-only">Open main menu</span>
-      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-      <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-    </button>
-    <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
-      <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+    <div>
+      <ul class="flex items-center">
         <% if current_user %>
-          <li>
+          <li class="mr-4 text-lg text-white">
             登入單位：<%= current_user.department.name %>
           </li>
           <li>
-            <%= button_to "登出", destroy_user_session_path, method: :delete, class: "block py-2 pl-3 pr-4 text-lg text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"%>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to "登入", new_user_session_path, class: "block py-2 pl-3 pr-4 text-lg text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"%>
-          </li>
-          <li>
-            <%= link_to "註冊", new_user_registration_path, class: "block py-2 pl-3 pr-4 text-lg text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"%>
+            <%= button_to "登出", destroy_user_session_path, method: :delete, class: "block text-lg text-gray-500 hover:bg-gray-50 hover:text-white md:dark:hover:bg-transparent"%>
           </li>
         <% end %>
       </ul>
