--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,17 @@
 <nav class="bg-white border-gray-200 py-2.5 sticky top-0 z-50">
-  <div class="container mx-auto">
+  <div class="container flex justify-between mx-auto">
     <h1>
       <img src="/ntust-logo.png" class="h-12" alt="NTUST Logo" />
     </h1>
+    <ul class="flex items-center">
+      <% unless current_user %>
+        <li>
+          <%= link_to "登入", new_user_session_path, class: "block py-2 pl-3 pr-4 text-lg text-gray-700 hover:bg-gray-50 md:dark:hover:bg-transparent"%>
+        </li>
+        <li>
+          <%= link_to "註冊", new_user_registration_path, class: "block py-2 pl-3 pr-4 text-lg text-gray-700 hover:bg-gray-50 md:dark:hover:bg-transparent"%>
+        </li>
+      <% end %>
+    </ul>
   </div>
 </nav>
