--- a/app/views/admin/recommenders/new.html.erb
+++ b/app/views/admin/recommenders/new.html.erb
@@ -1,32 +1,4 @@
 <div class="container mx-auto">
-  <p>
-  填寫名冊前請先閱讀以下說明，謝謝您
-
-  學界人士提名優先順序建議 :
-  1.友好、有互動、且對本校有正面評價者。
-  2.屬外國學術單位。
-  3.學術發表活躍，或有與本校合作者優先。
-  4.其他人員亦可列上，但建議以以上3項資格者為優先。
-
-  業界人士提名優先順序建議 :
-  1.友好、有互動、且對本校有正面評價者。
-  2.跨國或知名企業。
-  3.本國或外國企業從業人士皆可。
-  4.其他人員亦可列上，但建議以以上三項資格者為優先。
-
-  名冊填寫說明
-  1. 各欄位皆為必填，限以英文 (半形) 填入，並勿填寫如É、Ÿ等特殊字元。
-  2. 各欄位皆須提供資訊。
-  3. 務請確認填入資訊之正確性。
-  4.較易混淆之欄位說明及填寫範例如下:
-  Title / 稱謂: Mr., Ms., Mrs., M., Dr., Prof.
-  Position / 職稱: 其現職職稱, 如 Dean, Dept. Head, Director, Chair,Prof., Researcher 等。
-  5.填寫完畢後，點選【名單提交】完成填報。
-
-  ※如填寫表單有任何疑問，可連繫
-  研發處校務研究與發展中心
-  梁啓暉先生，分機3675
-
-  </p>
+  <%= render 'recommenders/info' %>
   <%= render 'form', recommender: @recommender %>
 </div>
