--- a/app/views/admin/recommenders/_form.html.erb
+++ b/app/views/admin/recommenders/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% end %>
 
-  <div class="max-w-3xl mt-20 grid gap-9 grid-cols-min-contect-and-auto">
+  <div class="max-w-3xl mt-20 grid gap-9 grid-cols-min-contect-and-auto" data-controller="recommenders">
     <span class="self-center text-right whitespace-nowrap">登入單位</span>
     <span class=""><%= @department_name || recommender.users.first.department.name %></span>
 
@@ -21,7 +21,7 @@
     <%= form.email_field :provider_email, class: "recommender-form-input", placeholder: "教師通訊電郵", required: true %>
 
     <%= form.label :category, class: "recommender-form-label" %>
-    <%= form.select :category, all_categories_options(recommender.category), {}, class: "recommender-form-select"%>
+    <%= form.select :category, all_categories_options(recommender.category), {}, class: "recommender-form-select", 'data-recommenders-target': 'category' %>
 
     <%= form.label :title, class: "recommender-form-label"%>
     <%= form.text_field :title, class: "recommender-form-input", placeholder: "Title", pattern: "[A-Za-z0-9.]*", required: true %>
@@ -38,69 +38,34 @@
     <%= form.label :job_title, class:"recommender-form-label"%>
     <%= form.text_field :job_title, class: "recommender-form-input", placeholder: "Position", pattern: "[A-Za-z0-9]*", required: true %>
 
-    <div id="department_block" class="contents">
+    <div class="contents" data-recommenders-target="department">
       <%= form.label :department, class:"recommender-form-label"%>
       <%= form.text_field :department, class: "recommender-form-input", placeholder: "Department", pattern: "[A-Za-z0-9 ]*" %>
     </div>
 
-    <div id="institution_block" class="contents">
+    <div class="contents" data-recommenders-target="institution">
       <%= form.label :institution_id, class: "recommender-form-label"%>
       <%= form.select :institution_id, all_institutions_options(recommender.institution_id), {}, class: "recommender-form-select", placeholder: "請選擇"%>
     </div>
 
-    <div id="industry_block" class="contents">
+    <div class="contents" data-recommenders-target="industry">
       <%= form.label :industry_id, class: "recommender-form-label" %>
       <%= form.select :industry_id, all_industries_options(recommender.industry_id), {}, class: "recommender-form-select", placeholder: "請選擇"%>
     </div>
 
-    <div id="company_name_block" class="contents" data-controller="autocomplete">
+    <div class="contents" data-controller="autocomplete" data-recommenders-target="company">
       <label class="self-center text-right" for="company"> Company Name(公司名稱) </label>
       <input type="text" name="company" id="company" class="recommender-form-input", pattern="[A-Za-z0-9]*" data-autocomplete-target="company" />
     </div>
 
-    <div id="country_block" class="contents">
-    <label class="self-center text-right" for="country"> Country(所屬國家) </label>
-    <select name="country" id="country" class="recommender-form-input">
-      <%= all_countries_options(recommender.institution&.country&.id) %>
-    </select>
-  </div>
+    <div class="contents" data-recommenders-target="country">
+      <label class="self-center text-right" for="country"> Country(所屬國家) </label>
+      <select name="country" id="country" class="recommender-form-input">
+        <%= all_countries_options(recommender.institution&.country&.id) %>
+      </select>
+    </div>
 
   </div>
 
   <%= form.submit '名單提交', class: "py-1 px-5 text-white bg-blue-700 border-2 border-blue-700 rounded-3xl hover:text-blue-700 hover:bg-white mt-20 ml-64 mb-60" %>
 <% end %>
-
-<script>
-const industry = document.querySelector('#industry_block')
-const department = document.querySelector('#department_block')
-const country = document.querySelector('#country_block')
-const company_name = document.querySelector('#company_name_block')
-const institution = document.querySelector('#institution_block')
-document.querySelector("#recommender_category").addEventListener("change", function(e){
-  changeDisplay(e.target.value);
-})
-
-window.onload = changeDisplay('學術界');
-
-function changeDisplay(category){
-  industry.style.display = 'none'
-  department.style.display = 'none'
-  country.style.display = 'none'
-  company_name.style.display = 'none'
-  institution.style.display = 'none'
-  if(category === '學術界') {
-    department.style.display = 'contents'
-    institution.style.display = 'contents'
-  }else {
-    industry.style.display = 'contents'
-    country.style.display = 'contents'
-    company_name.style.display = 'contents'
-  }
-}
-
-var elements = document.querySelectorAll('input,select,textarea');
-var invalidListener = function(){ this.scrollIntoView(false); };
-
-for(var i = elements.length; i--;)
-    elements[i].addEventListener('invalid', invalidListener);
-</script>
