Update table layout

--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<ul class="fixed w-1/6 pr-4">
+<ul class="fixed left-0 w-1/6 pr-4">
   <li class="py-3 text-center border-b border-gray-100 hover:bg-gray-100">
     <%= link_to '名冊填報', new_admin_recommender_path, class: 'block' %>
   </li>
