--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -31,7 +31,7 @@
       <div class="w-1/6 shadow-md">
         <%= render "admin/sidebar" %>
       </div>
-      <div class="ml-3">
+      <div class="w-5/6 ml-3">
         <%= yield %>
       </div>
     </div>
