Update share new recommender link layout

--- a/app/views/admin/recommenders/share.html.erb
+++ b/app/views/admin/recommenders/share.html.erb
@@ -1,1 +1,4 @@
-<p>分享此連結給推薦者：<%= link_to nil, new_recommender_url(user_token: current_user.token) %></p>
+<p class="flex flex-col items-center justify-center h-1/2">
+分享此連結給推薦者：<br>
+<%= link_to nil, new_recommender_url(user_token: current_user.token), class: 'text-blue-600 hover:underline', target: "_blank" %>
+</p>
