--- a/app/views/admin/recommenders/upload.html.erb
+++ b/app/views/admin/recommenders/upload.html.erb
@@ -1,12 +1,12 @@
-<%= form_tag({:action => :upload}, :multipart => true) do %>
-  <%= file_field_tag 'excel' %>
-  <%= submit_tag '匯入 Excel' %>
+<%= form_tag({:action => :upload}, :multipart => true, class: 'mt-4') do %>
+  <%= file_field_tag 'excel', class: "text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer focus:outline-none" %>
+  <%= submit_tag '匯入 Excel', class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-1 mb-2 focus:outline-none" %>
 <% end %>
-<%= link_to '填報表格檔案(Excel)', download_template_excel_admin_recommenders_path %>
+<%= link_to '填報表格檔案(Excel)', download_template_excel_admin_recommenders_path, class: "focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm py-1 block w-48 text-center mb-2" %>
 <p>※請依照指定檔案格式上傳，表格檔案請點選<span class="text-red-500">【填報表格檔案】</span>進行下載</p>
 
 <% if @pending_recommenders.count > 0 %>
-  <p>目前有 <%= @pending_recommenders.count %> 筆資料需要修正後才可存入</p>
+  <p class="mt-2">目前有 <span class="text-red-500"><%= @pending_recommenders.count %></span> 筆資料需要修正後才可存入</p>
 <% else %>
   <p>目前無待修正的資料</p>
 <% end %>
