Fix sidebar overfit

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -31,8 +31,10 @@
       <div class="w-1/6 shadow-md">
         <%= render "admin/sidebar" %>
       </div>
-      <div class="w-5/6 ml-3">
-        <%= yield %>
+      <div class="w-5/6">
+        <div class="ml-3">
+          <%= yield %>
+        </div>
       </div>
     </div>
   </body>
