Add z-index in nav

--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-800 sticky top-0">
+<nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-800 sticky top-0 z-10">
   <div class="container flex flex-wrap items-center justify-between mx-auto">
     <a href="/" class="flex items-center">
         <img src="/ntust-logo-dark.png" class="h-12" alt="NTUST logo" />
