Typo _info.html.erb in recommenders

--- a/app/views/recommenders/_info.html.erb
+++ b/app/views/recommenders/_info.html.erb
@@ -23,7 +23,7 @@
       <li>友好、有互動、且對本校有正面評價者。</li>
       <li>跨國或知名企業。</li>
       <li>本國或外國企業從業人士皆可。</li>
-      <li>其他人員亦可列上，但建議以以上三項資格者為優先。</li>
+      <li>其他人員亦可列上，但建議以以上3項資格者為優先。</li>
     </ul>
   </div>
 
