--- a/app/views/recommenders/_form.html.erb
+++ b/app/views/recommenders/_form.html.erb
@@ -12,7 +12,7 @@
 
   <div class="max-w-3xl mt-20 grid gap-9 grid-cols-min-contect-and-auto" data-controller="recommenders">
     <label class="self-center text-right" for="provider_department">登入單位</label>
-    <select name="provider_department" id="departments" class="recommender-form-input" disabled>
+    <select name="provider_department" id="departments" class="appearance-none recommender-form-input" disabled>
       <%= all_departments_options(@department, @department&.id) %>
     </select>
 
