--- a/app/views/admin/recommenders/_table.html.erb
+++ b/app/views/admin/recommenders/_table.html.erb
@@ -3,52 +3,52 @@
   <table class="w-full text-sm text-left text-gray-500" >
     <thead class="text-xs text-gray-700 uppercase bg-gray-50" >
       <tr>
-        <th scope="col" class="px-4 py-3" >最後更新時間</th>
-        <th scope="col" class="px-4 py-3" >登入單位</th>
-        <th scope="col" class="px-4 py-3" >提供此名單之教師姓名</th>
-        <th scope="col" class="px-4 py-3" >提供此名單之教師電郵</th>
-        <th scope="col" class="px-4 py-3" >名單種類</th>
-        <th scope="col" class="px-4 py-3" >Title 稱謂</th>
-        <th scope="col" class="px-4 py-3" >First Name 名字</th>
-        <th scope="col" class="px-4 py-3" >Last Name 姓</th>
-        <th scope="col" class="px-4 py-3" >Email</th>
+        <th scope="col" class="recommender-table-th" >最後更新時間</th>
+        <th scope="col" class="recommender-table-th" >登入單位</th>
+        <th scope="col" class="recommender-table-th" >提供此名單之教師姓名</th>
+        <th scope="col" class="recommender-table-th" >提供此名單之教師電郵</th>
+        <th scope="col" class="recommender-table-th" >Category<br>名單種類</th>
+        <th scope="col" class="recommender-table-th" >Title<br>稱謂</th>
+        <th scope="col" class="recommender-table-th" >First Name<br>名字</th>
+        <th scope="col" class="recommender-table-th" >Last Name<br>姓</th>
+        <th scope="col" class="recommender-table-th" >Email<br>電子信箱</th>
         <% if type == :academic %>
-        <th scope="col" class="px-4 py-3" >Department 部門</th>
-      <% elsif type == :industry %>
-      <th scope="col" class="px-4 py-3" >Industry產業類別</th>
-    <% else %>
-      <th scope="col" class="px-4 py-3" >Department 部門</th>
-      <th scope="col" class="px-4 py-3" >Industry產業類別</th>
-    <% end %>
-    <th scope="col" class="px-4 py-3" >Institution 機構名稱</th>
-    <th scope="col" class="px-4 py-3" >Position 稱謂</th>
-    <th colspan="3"></th>
+        <th scope="col" class="recommender-table-th" >Department<br>部門</th>
+        <% elsif type == :industry %>
+          <th scope="col" class="recommender-table-th" >Industry<br>產業類別</th>
+        <% else %>
+          <th scope="col" class="recommender-table-th" >Department<br>部門</th>
+          <th scope="col" class="recommender-table-th" >Industry<br>產業類別</th>
+        <% end %>
+        <th scope="col" class="recommender-table-th" >Institution<br>機構名稱</th>
+        <th scope="col" class="recommender-table-th" >Position<br>稱謂</th>
+        <th colspan="3"></th>
       </tr>
     </thead>
 
     <tbody>
       <% recommenders.each do |recommender| %>
         <tr class="border-b odd:bg-white even:bg-gray-50" >
-          <td class="px-4 py-4"><%= recommender.updated_at.strftime('%Y-%m-%d %H:%M:%S')  %></td>
-          <td class="px-4 py-4"><%= NtustDepartment.includes(users: :recommenders).where(recommenders: { id: recommender.id }).pluck(:name).join("\n") %></td>
-          <td class="px-4 py-4"><%= recommender.provider_name %></td>
-          <td class="px-4 py-4"><%= recommender.provider_email %></td>
-          <td class="px-4 py-4"><%= recommender.category %></td>
-          <td class="px-4 py-4"><%= recommender.title %></td>
-          <td class="px-4 py-4"><%= recommender.first_name %></td>
-          <td class="px-4 py-4"><%= recommender.last_name %></td>
-          <td class="px-4 py-4"><%= recommender.email %></td>
+          <td class="recommender-table-td"><%= recommender.updated_at.strftime('%Y-%m-%d %H:%M:%S')  %></td>
+          <td class="recommender-table-td"><%= NtustDepartment.includes(users: :recommenders).where(recommenders: { id: recommender.id }).pluck(:name).join("\n") %></td>
+          <td class="recommender-table-td"><%= recommender.provider_name %></td>
+          <td class="recommender-table-td"><%= recommender.provider_email %></td>
+          <td class="recommender-table-td"><%= recommender.category %></td>
+          <td class="recommender-table-td"><%= recommender.title %></td>
+          <td class="recommender-table-td"><%= recommender.first_name %></td>
+          <td class="recommender-table-td"><%= recommender.last_name %></td>
+          <td class="recommender-table-td"><%= recommender.email %></td>
           <% if type == :academic %>
-            <td class="px-4 py-4"><%= recommender.department %></td>
+            <td class="recommender-table-td"><%= recommender.department %></td>
           <% elsif type == :industry %>
-            <td class="px-4 py-4"><%= recommender.industry&.name %></td>
+            <td class="recommender-table-td"><%= recommender.industry&.name %></td>
           <% else %>
-            <td class="px-4 py-4"><%= recommender.department %></td>
-            <td class="px-4 py-4"><%= recommender.industry&.name %></td>
+            <td class="recommender-table-td"><%= recommender.department %></td>
+            <td class="recommender-table-td"><%= recommender.industry&.name %></td>
           <% end %>
-          <td class="px-4 py-4"><%= recommender.institution&.name %></td>
-          <td class="px-4 py-4"><%= recommender.job_title %></td>
-          <td class="px-4 py-4"><% if recommender.pending? %><%= link_to '修改', edit_admin_recommender_path(recommender.id), class: 'text-blue-600 hover:underline' %><% end %></td>
+          <td class="recommender-table-td"><%= recommender.institution&.name %></td>
+          <td class="recommender-table-td"><%= recommender.job_title %></td>
+          <td class="recommender-table-td"><% if recommender.pending? %><%= link_to '修改', edit_admin_recommender_path(recommender.id), class: 'text-blue-600 hover:underline' %><% end %></td>
         </tr>
       <% end %>
     </tbody>
