Fix department is required in recommender form

--- a/app/views/recommenders/_form.html.erb
+++ b/app/views/recommenders/_form.html.erb
@@ -37,7 +37,7 @@
     <%= form.text_with_label_field :job_title, placeholder: "Position" %>
 
     <div class="contents" data-recommenders-target="department">
-      <%= form.text_with_label_field :department, placeholder: "Department" %>
+      <%= form.text_with_label_field :department, placeholder: "Department", required: false %>
     </div>
 
     <div class="contents" data-recommenders-target="institution">
