--- a/app/views/admin/recommenders/new.html.erb
+++ b/app/views/admin/recommenders/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container mx-auto">
   <%= render 'recommenders/info' %>
-  <%= render 'form', recommender: @recommender %>
+  <%= render 'form', recommender: @recommender, department: @department %>
 </div>
