--- a/app/views/recommenders/new.html.erb
+++ b/app/views/recommenders/new.html.erb
@@ -6,7 +6,7 @@
   </div>
   <%= render 'info' %>
   <div class="container mx-auto">
-    <%= render 'form', recommender: @recommender %>
+    <%= render 'form', recommender: @recommender, department: @department %>
   </div>
   <div class="absolute bottom-0 right-0 -z-10">
     <%= image_tag "new-effect.svg" %>
